@@ -1,3 +1,8 @@
+** v2.17, xx.09.2016**
+* Add BigWigs settings to my install.
+* Add option to hide the Zone Text in OrderHall CommandBar.
+* More work on the ObjectiveTracker.
+
 ** v2.16, 05.09.2016**
 * Revert changes to the Chat Tab.
 * Add own skin for Oderhall CommandBar. It's movable now.
